Started a new version which is cleaner.

--- a/source/FourTopsGNNSampleProduction/CMakeLists.txt
+++ b/source/FourTopsGNNSampleProduction/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 atlas_subdir( FourTopsGNNSampleProduction None)
 
 atlas_depends_on_subdirs( PUBLIC
@@ -8,10 +7,10 @@ atlas_depends_on_subdirs( PUBLIC
 find_package( ROOT REQUIRED COMPONENTS Core Gpad Tree Hist RIO MathCore Graf)
 
 atlas_add_root_dictionary(FourTopsGNNSampleProduction _cintDictSource
-                          ROOT_HEADERS Root/LinkDef.h
+                          ROOT_HEADERS ROOT/LinkDef.h
                           EXTERNAL_PACKAGES ROOT)
 
-atlas_add_library( FourTopsGNNSampleProduction Root/*.cxx Root/*.h
+atlas_add_library( FourTopsGNNSampleProduction ROOT/*.cxx Root/*.h
                    FourTopsGNNSampleProduction/*.h FourTopsGNNSampleProduction/*/*.h 
                    ${_cintDictSource}
                    PUBLIC_HEADERS FourTopsGNNSampleProduction 
